--- a/index.html
+++ b/index.html
@@ -2,63 +2,171 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>القرعة</title>
+  <title>قرعة العناني</title>
   <style>
-    body { font-family: Arial; text-align: center; padding: 40px; direction: rtl; }
-    .winner { background: gold; padding: 30px; font-size: 2em; margin-top: 20px; }
-    .countdown { font-size: 24px; margin: 10px; }
-    .hidden { display: none; }
+    body {
+      font-family: 'Arial', sans-serif;
+      background: #f8f8f8;
+      text-align: center;
+      direction: rtl;
+      padding: 20px;
+    }
+    .header {
+      background: linear-gradient(to right, gold, orange);
+      padding: 20px;
+      margin-bottom: 20px;
+      border: 5px solid gold;
+      font-size: 2em;
+      font-weight: bold;
+      color: #333;
+      box-shadow: 0 0 20px gold;
+    }
+    .section {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+    .box {
+      border: 2px solid #999;
+      padding: 15px;
+      background: #fff;
+      min-width: 200px;
+      max-height: 300px;
+      overflow-y: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .countdown, .draw-countdown {
+      font-size: 24px;
+      margin: 20px;
+      color: #d35400;
+      font-weight: bold;
+    }
+    #roulette {
+      font-size: 28px;
+      margin: 30px auto;
+      height: 50px;
+      width: 300px;
+      overflow: hidden;
+      position: relative;
+      border: 2px dashed #aaa;
+      background: #f0f0f0;
+    }
+    #roulette span {
+      position: absolute;
+      width: 100%;
+      animation: spin 5s linear infinite;
+    }
+    @keyframes spin {
+      0% { top: 100%; }
+      100% { top: -100%; }
+    }
+    .winner-box {
+      margin-top: 40px;
+      padding: 30px;
+      background: #fff8dc;
+      border: 5px solid gold;
+      font-size: 2em;
+      font-weight: bold;
+      color: #c0392b;
+      box-shadow: 0 0 30px gold;
+    }
   </style>
 </head>
 <body>
-  <h1>قرعة اليوم</h1>
-  <div class="countdown" id="timer">تحميل...</div>
-  <div id="result" class="winner hidden"></div>
+  <div class="header">مرحبًا بكم مع العناني 🎉</div>
+  <div class="countdown" id="initial-timer">جاري تحميل الوقت المتبقي...</div>
+  <div class="section">
+    <div class="box">
+      <div><strong>📋 عدد المشاركين:</strong></div>
+      <div id="participant-count">0</div>
+    </div>
+    <div class="box">
+      <div><strong>👥 أسماء المشاركين:</strong></div>
+      <div id="participant-list"></div>
+    </div>
+  </div>
+
+  <div class="draw-countdown hidden" id="draw-timer"></div>
+  <div id="roulette"></div>
+  <div class="winner-box hidden" id="winner-box"></div>
 
   <script>
-    const timerEl = document.getElementById("timer");
-    const resultEl = document.getElementById("result");
+    const initialTimer = document.getElementById("initial-timer");
+    const drawTimer = document.getElementById("draw-timer");
+    const participantList = document.getElementById("participant-list");
+    const participantCount = document.getElementById("participant-count");
+    const roulette = document.getElementById("roulette");
+    const winnerBox = document.getElementById("winner-box");
 
-    async function fetchStatus() {
-      const res = await fetch("/lottery_status.php");
-      const data = await res.json();
+    let participants = [];
 
-      if (data.status === "done") {
-        timerEl.style.display = "none";
-        resultEl.classList.remove("hidden");
-        resultEl.textContent = `🎉 الفائز هو: ${data.winner}`;
-      } else if (data.status === "pending") {
-        const drawTime = new Date(data.draw_time).getTime();
-        startCountdown(drawTime);
-      }
+    async function loadParticipants() {
+      const res = await fetch("names.txt");
+      const text = await res.text();
+      participants = text.split("\n").filter(n => n.trim() !== "");
+      participantCount.textContent = participants.length;
+      participantList.innerHTML = participants.map(n => `<div>${n}</div>`).join("");
     }
 
-    function startCountdown(targetTime) {
-      const timer = setInterval(async () => {
+    function startInitialCountdown(targetTime) {
+      const timer = setInterval(() => {
         const now = new Date().getTime();
         const diff = targetTime - now;
 
         if (diff <= 0) {
           clearInterval(timer);
-          timerEl.textContent = "🔄 جاري اختيار الفائز...";
-          const res = await fetch("/pick_winner.php");
-          const result = await res.json();
-          if (result.status === "success") {
-            resultEl.classList.remove("hidden");
-            resultEl.textContent = `🎉 الفائز هو: ${result.winner}`;
-            timerEl.style.display = "none";
-          } else {
-            resultEl.textContent = "❌ حدث خطأ أثناء الاختيار.";
-          }
+          initialTimer.textContent = "⏱️ جاري بدء القرعة بعد 5 دقائق...";
+          startDrawCountdown(5 * 60);
+          startRoulette();
         } else {
-          const mins = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+          const mins = Math.floor(diff / (1000 * 60));
           const secs = Math.floor((diff % (1000 * 60)) / 1000);
-          timerEl.textContent = `⏳ تبقى على بداية القرعة: ${mins} دقيقة و ${secs} ثانية`;
+          initialTimer.textContent = `⏳ تبقى على بداية القرعة: ${mins} دقيقة و ${secs} ثانية`;
         }
       }, 1000);
     }
 
-    fetchStatus();
+    function startDrawCountdown(seconds) {
+      drawTimer.classList.remove("hidden");
+      let s = seconds;
+      const interval = setInterval(() => {
+        const mins = Math.floor(s / 60);
+        const secs = s % 60;
+        drawTimer.textContent = `🎲 القرعة تبدأ خلال: ${mins} دقيقة و ${secs} ثانية`;
+        s--;
+        if (s < 0) {
+          clearInterval(interval);
+          stopRouletteAndPickWinner();
+        }
+      }, 1000);
+    }
+
+    let spinInterval;
+    function startRoulette() {
+      roulette.innerHTML = '<span id="spin">🎰 جاري تدوير الأسماء...</span>';
+      spinInterval = setInterval(() => {
+        const name = participants[Math.floor(Math.random() * participants.length)];
+        document.getElementById("spin").textContent = name;
+      }, 100);
+    }
+
+    function stopRouletteAndPickWinner() {
+      clearInterval(spinInterval);
+      const winner = participants[Math.floor(Math.random() * participants.length)];
+      roulette.innerHTML = "";
+      winnerBox.classList.remove("hidden");
+      winnerBox.textContent = `🎉 الفائز هو: ${winner}`;
+    }
+
+    // --- نقطة البداية ---
+    loadParticipants();
+
+    // حدد وقت بداية القرعة (عدله حسب الوقت الحقيقي)
+    const drawStartTime = new Date();
+    drawStartTime.setMinutes(drawStartTime.getMinutes() + 1); // تبدأ بعد دقيقة
+    startInitialCountdown(drawStartTime.getTime());
   </script>
 </body>
 </html>
