--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>قرعة العناني</title>
   <style>
     body {
@@ -12,7 +12,6 @@
       direction: rtl;
       padding: 20px;
     }
-
     .header {
       background: linear-gradient(to right, gold, orange);
       padding: 20px;
@@ -22,20 +21,17 @@
       box-shadow: 0 0 20px gold;
       margin-bottom: 30px;
     }
-
     .timer {
       margin: 10px 0;
-      font-size: 1.5em;
+      font-size: 1.8em;
       color: gold;
     }
-
     .section {
       display: flex;
       justify-content: center;
       gap: 40px;
       margin-bottom: 30px;
     }
-
     .box {
       background: #111;
       border: 2px solid gold;
@@ -44,7 +40,6 @@
       max-height: 200px;
       overflow-y: auto;
     }
-
     .machine {
       width: 95vw;
       height: 50vh;
@@ -55,11 +50,10 @@
       overflow: hidden;
       position: relative;
       box-shadow: 0 0 30px gold;
-      display: flex;
+      display: none;
       align-items: center;
       justify-content: center;
     }
-
     .name-strip {
       position: absolute;
       width: 100%;
@@ -69,10 +63,9 @@
       transform: translateY(-50%);
       color: white;
     }
-
     .winner-box {
       margin-top: 30px;
-      font-size: 2em;
+      font-size: 2.2em;
       background: gold;
       color: #000;
       padding: 20px;
@@ -80,7 +73,6 @@
       box-shadow: 0 0 20px gold;
       display: none;
     }
-
     .hidden { display: none; }
   </style>
 </head>
@@ -99,11 +91,9 @@
   </div>
 
   <div class="timer hidden" id="draw-timer"></div>
-
-  <div class="machine hidden" id="roulette-machine">
+  <div class="machine" id="roulette-machine">
     <div class="name-strip" id="spinning-name">🔄</div>
   </div>
-
   <div class="winner-box" id="winner-box"></div>
 
   <script>
@@ -117,17 +107,18 @@
     const rouletteMachine = document.getElementById("roulette-machine");
 
     let participants = [];
+    let winner = null;
 
-    async function getWinner() {
-      const res = await fetch("get_winner.php");
-      const data = await res.json();
-      return data.winner;
-    }
-
-    async function fetchDrawTime() {
-      const res = await fetch("draw_config.php");
-      const data = await res.json();
-      return new Date(data.start_time).getTime();
+    async function loadWinner() {
+      try {
+        const res = await fetch("winner.txt");
+        const name = await res.text();
+        if (name.trim()) {
+          winner = name.trim();
+        }
+      } catch {
+        // لا شيء
+      }
     }
 
     async function loadParticipants() {
@@ -138,88 +129,90 @@
       participantList.innerHTML += "<ul>" + participants.map(n => `<li>${n}</li>`).join("") + "</ul>";
     }
 
-    function showWinner(winnerName) {
-      participantsSection.classList.add("hidden");
+    async function fetchDrawTime() {
+      const res = await fetch("draw_config.php");
+      const data = await res.json();
+      return new Date(data.start_time).getTime();
+    }
+
+    function showWinner(name) {
+      rouletteMachine.style.display = "none";
       drawTimer.classList.add("hidden");
-      rouletteMachine.classList.add("hidden");
       initialTimer.classList.add("hidden");
       winnerBox.style.display = "block";
-      winnerBox.textContent = `🎉 الفائز هو: ${winnerName}`;
+      winnerBox.textContent = `🎉 الفائز هو: ${name}`;
     }
 
-    function startInitialCountdown(targetTime) {
-      const timer = setInterval(() => {
-        const now = new Date().getTime();
-        const diff = targetTime - now;
-
-        if (diff <= 0) {
-          clearInterval(timer);
-          initialTimer.textContent = "🎯 جاري بدء القرعة بعد 5 دقائق...";
-          participantsSection.classList.add("hidden");
-          rouletteMachine.classList.remove("hidden");
-          drawTimer.classList.remove("hidden");
-          startDrawCountdown(5 * 60);
-          startRoulette();
-        } else {
-          const mins = Math.floor(diff / (1000 * 60));
-          const secs = Math.floor((diff % (1000 * 60)) / 1000);
-          initialTimer.textContent = `⏳ تبقى على بداية القرعة: ${mins} دقيقة و ${secs} ثانية`;
-        }
-      }, 1000);
-    }
-
-    function startDrawCountdown(seconds) {
-      let s = seconds;
+    function startInitialCountdown(startTime) {
+      const drawEndTime = startTime + 5 * 60 * 1000; // بعد 5 دقائق من وقت البداية
       const interval = setInterval(() => {
-        const mins = Math.floor(s / 60);
-        const secs = s % 60;
-        drawTimer.textContent = `🎲 القرعة تبدأ خلال: ${mins} دقيقة و ${secs} ثانية`;
-        s--;
-        if (s < 0) {
+        const now = Date.now();
+
+        if (winner) {
           clearInterval(interval);
-          stopRouletteAndShowWinner();
+          showWinner(winner);
+          return;
+        }
+
+        if (now < startTime) {
+          const diff = startTime - now;
+          const mins = Math.floor(diff / 60000);
+          const secs = Math.floor((diff % 60000) / 1000);
+          initialTimer.textContent = `⏳ تبقى على بداية القرعة: ${mins} دقيقة و ${secs} ثانية`;
+        } else if (now < drawEndTime) {
+          const diff = drawEndTime - now;
+          const mins = Math.floor(diff / 60000);
+          const secs = Math.floor((diff % 60000) / 1000);
+          drawTimer.textContent = `🎲 القرعة تبدأ خلال: ${mins} دقيقة و ${secs} ثانية`;
+          initialTimer.classList.add("hidden");
+          drawTimer.classList.remove("hidden");
+          participantsSection.classList.add("hidden");
+          rouletteMachine.style.display = "flex";
+          startRoulette(drawEndTime);
+          clearInterval(interval);
+        } else {
+          // انتهى وقت القرعة لكن لم يتم إعلان فائز بعد
+          if (!winner) {
+            pickWinner();
+          } else {
+            showWinner(winner);
+            clearInterval(interval);
+          }
         }
       }, 1000);
     }
 
     let spinningInterval;
-    function startRoulette() {
+
+    function startRoulette(endTime) {
       let index = 0;
       spinningInterval = setInterval(() => {
         spinningName.textContent = participants[index % participants.length];
         index++;
+        if (Date.now() >= endTime) {
+          clearInterval(spinningInterval);
+          pickWinner();
+        }
       }, 100);
     }
 
-    function stopRouletteAndShowWinner() {
-      clearInterval(spinningInterval);
-      let i = Math.floor(Math.random() * participants.length);
-      let delay = 150;
-      const slowDown = setInterval(() => {
-        spinningName.textContent = participants[i % participants.length];
-        i++;
-        delay += 100;
-        if (delay > 2000) {
-          clearInterval(slowDown);
-          const winner = participants[(i - 1) % participants.length];
-          fetch("save_winner.php", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ winner })
-          });
-          showWinner(winner);
-        }
-      }, delay);
+    function pickWinner() {
+      const index = Math.floor(Math.random() * participants.length);
+      const name = participants[index];
+      winner = name;
+      fetch("save_winner.php", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ winner: name })
+      });
+      showWinner(name);
     }
 
-    // ✅ البداية
-    loadParticipants();
-    Promise.all([fetchDrawTime(), getWinner()]).then(([drawTime, winner]) => {
-      if (winner) {
-        showWinner(winner);
-      } else {
-        startInitialCountdown(drawTime);
-      }
+    // التشغيل
+    loadWinner().then(() => {
+      loadParticipants().then(() => {
+        fetchDrawTime().then(startInitialCountdown);
+      });
     });
   </script>
 </body>
